update project dependency Closes #29

--- a/dart/.github/workflows/release.yml
+++ b/dart/.github/workflows/release.yml
@@ -6,10 +6,14 @@ on:
     tags:
       - '*.*.*'
 
+permissions: read-all
+
 jobs:
   build:
     name: Release a new APK
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout Code
@@ -36,7 +40,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ github.workspace }}/build/app/outputs/flutter-apk/app-release.apk
-          asset_name: ${{ steps.pubspec.outputs['name'] }}-${{ steps.pubspec.outputs['version'] }}.apk
+          file: ${{ github.workspace }}/build/app/outputs/flutter-apk/app-release.apk # yamllint disable-line rule:line-length
+          asset_name: ${{ steps.pubspec.outputs['name'] }}-${{ steps.pubspec.outputs['version'] }}.apk # yamllint disable-line rule:line-length
           tag: ${{ github.ref }}
           overwrite: true
